--- a/talismane_ftb/build.xml
+++ b/talismane_ftb/build.xml
@@ -34,7 +34,11 @@
 		<mkdir dir="${doc}" />
 		<mkdir dir="${dist}" />
 	</target>
-		
+			
+	<target name="clean" depends="init" description="removes all directories related to this build">
+		<delete dir="${build}"/>
+	</target>
+	
 	<target name="compile" depends="init">
 		<javac srcdir="${src}" destdir="${classes}" deprecation="on" debug="on" encoding="utf-8">
 			<classpath><path refid="classpath" /></classpath>
