--- a/talismane_fr/src/log4j.properties
+++ b/talismane_fr/src/log4j.properties
@@ -2,7 +2,7 @@
 # For all other servers: Comment out the Log4J listener in web.xml to activate Log4J.
 log4j.rootLogger=INFO,logfile
 log4j.category.com.joliciel=DEBUG
-log4j.category.opennlp=DEBUG
+#log4j.category.opennlp=DEBUG
 #log4j.category.com.joliciel.talismane.tokeniser.features=TRACE
 #log4j.category.com.joliciel.talismane.sentenceDetector.features=TRACE
 #log4j.category.com.joliciel.talismane.posTagger.PosTagSequenceImpl=DEBUG
