--- a/talismane_fr/src/log4j.properties
+++ b/talismane_fr/src/log4j.properties
@@ -9,6 +9,8 @@ log4j.category.com.joliciel=DEBUG
 #log4j.category.com.joliciel.talismane.posTagger.PosTaggerImpl=TRACE
 #log4j.category.com.joliciel.talismane.parser.ParserRegexBasedCorpusReaderImpl=DEBUG
 #log4j.category.com.joliciel.talismane.parser.TransitionBasedParser=TRACE
+#log4j.category.com.joliciel.talismane.tokeniser.patterns.PatternTokeniserImpl=TRACE
+#log4j.category.com.joliciel.talismane.tokeniser.patterns.TokenPatternImpl=TRACE
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
