--- a/talismane_fr/src/log4j.properties
+++ b/talismane_fr/src/log4j.properties
@@ -11,6 +11,8 @@ log4j.category.com.joliciel=DEBUG
 #log4j.category.com.joliciel.talismane.parser.TransitionBasedParser=TRACE
 #log4j.category.com.joliciel.talismane.tokeniser.patterns.PatternTokeniserImpl=TRACE
 #log4j.category.com.joliciel.talismane.tokeniser.patterns.TokenPatternImpl=TRACE
+#log4j.category.com.joliciel.talismane.sentenceDetector.SentenceDetectorImpl=TRACE
+#log4j.category.com.joliciel.talismane.filters=TRACE
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
