--- a/talismane_fr/src/log4j.properties
+++ b/talismane_fr/src/log4j.properties
@@ -1,6 +1,7 @@
 # For JBoss: Avoid to setup Log4J outside $JBOSS_HOME/server/default/deploy/log4j.xml!
 # For all other servers: Comment out the Log4J listener in web.xml to activate Log4J.
 log4j.rootLogger=INFO,logfile
+#log4j.rootLogger=INFO,logfile,stdout
 log4j.category.com.joliciel=DEBUG
 #log4j.category.opennlp=DEBUG
 #log4j.category.com.joliciel.talismane.tokeniser.features=TRACE
@@ -9,6 +10,7 @@ log4j.category.com.joliciel=DEBUG
 #log4j.category.com.joliciel.talismane.posTagger.PosTaggerImpl=TRACE
 #log4j.category.com.joliciel.talismane.parser.ParserRegexBasedCorpusReaderImpl=DEBUG
 #log4j.category.com.joliciel.talismane.parser.TransitionBasedParser=TRACE
+#log4j.category.com.joliciel.talismane.parser=TRACE
 #log4j.category.com.joliciel.talismane.tokeniser.patterns.PatternTokeniserImpl=TRACE
 #log4j.category.com.joliciel.talismane.tokeniser.patterns.TokenPatternImpl=TRACE
 #log4j.category.com.joliciel.talismane.sentenceDetector.SentenceDetectorImpl=TRACE
