--- a/talismane_fr/src/log4j.properties
+++ b/talismane_fr/src/log4j.properties
@@ -4,17 +4,23 @@ log4j.rootLogger=INFO,logfile
 #log4j.rootLogger=INFO,logfile,stdout
 log4j.category.com.joliciel=DEBUG
 #log4j.category.opennlp=DEBUG
-#log4j.category.com.joliciel.talismane.tokeniser.features=TRACE
-#log4j.category.com.joliciel.talismane.sentenceDetector.features=TRACE
-#log4j.category.com.joliciel.talismane.posTagger.PosTagSequenceImpl=DEBUG
-#log4j.category.com.joliciel.talismane.posTagger.PosTaggerImpl=TRACE
-#log4j.category.com.joliciel.talismane.parser.ParserRegexBasedCorpusReaderImpl=DEBUG
-#log4j.category.com.joliciel.talismane.parser.TransitionBasedParser=TRACE
+#log4j.category.com.joliciel.talismane.filters=TRACE
 #log4j.category.com.joliciel.talismane.parser=TRACE
+#log4j.category.com.joliciel.talismane.parser.features=TRACE
+#log4j.category.com.joliciel.talismane.parser.ParserRegexBasedCorpusReaderImpl=TRACE
+#log4j.category.com.joliciel.talismane.parser.TransitionBasedParser=TRACE
+#log4j.category.com.joliciel.talismane.posTagger=TRACE
+#log4j.category.com.joliciel.talismane.posTagger.features=TRACE
+#log4j.category.com.joliciel.talismane.posTagger.PosTaggerImpl=TRACE
+#log4j.category.com.joliciel.talismane.posTagger.PosTagSequenceImpl=TRACE
+#log4j.category.com.joliciel.talismane.sentenceDetector=TRACE
+#log4j.category.com.joliciel.talismane.sentenceDetector.features=TRACE
+#log4j.category.com.joliciel.talismane.sentenceDetector.SentenceDetectorImpl=TRACE
+#log4j.category.com.joliciel.talismane.tokeniser=TRACE
+#log4j.category.com.joliciel.talismane.tokeniser.features=TRACE
+#log4j.category.com.joliciel.talismane.tokeniser.patterns=TRACE
 #log4j.category.com.joliciel.talismane.tokeniser.patterns.PatternTokeniserImpl=TRACE
 #log4j.category.com.joliciel.talismane.tokeniser.patterns.TokenPatternImpl=TRACE
-#log4j.category.com.joliciel.talismane.sentenceDetector.SentenceDetectorImpl=TRACE
-#log4j.category.com.joliciel.talismane.filters=TRACE
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
