--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,7 @@
 				<include name="talismane_ftbDep/build.xml"/>
 			</fileset>
 		</subant>
-		<subant target="jar">
+		<subant target="one-jar">
 			<fileset dir=".">
 				<include name="talismane_fr/build.xml"/>
 				<include name="talismane_trainer_fr/build.xml"/>
