--- a/talismane_fr/build.xml
+++ b/talismane_fr/build.xml
@@ -18,6 +18,16 @@
 		<property name="build" value="build"/>
 		<property name="classes" location="${build}/classes" />
 		<property name="doc" location="${build}/doc" />
+		<mkdir dir="${build}" />
+		<mkdir dir="${classes}" />
+		<mkdir dir="${doc}" />
+		<mkdir dir="${dist}" />
+		<mkdir dir="${dist}/lib" />
+		<copy todir="${dist}/lib">
+			<fileset dir="${sharedLib}">
+				<include name="**/*.jar" />
+			</fileset>
+		</copy>
 		<path id="classpath">
 			<fileset dir="${sharedLib}">
 				<include name="**/*.jar" />
@@ -32,10 +42,18 @@
 			<!-- build output path -->
 			<pathelement location="${classes}"/>
 		</path>
-		<mkdir dir="${build}" />
-		<mkdir dir="${classes}" />
-		<mkdir dir="${doc}" />
-		<mkdir dir="${dist}" />
+		<path id="classpath.jar">
+			<fileset dir="${dist}/lib">
+				<include name="**/*.jar" />
+			</fileset>
+			<fileset dir="${dist}">
+				<include name="talismane-utils-${talismane.version}.jar" />
+				<include name="talismane-machineLearning-${talismane.version}.jar" />
+				<include name="talismane-core-${talismane.version}.jar" />
+				<include name="talismane-lefff-${talismane.version}.jar" />
+				<include name="talismane-ftbDep-${talismane.version}.jar" />
+			</fileset>
+		</path>
 	</target>
 			
 	<target name="clean" depends="init" description="removes all directories related to this build">
@@ -43,7 +61,7 @@
 	</target>
 	
 	<target name="compile" depends="init">
-		<javac srcdir="${src}" destdir="${classes}" deprecation="on" debug="on" encoding="utf-8">
+		<javac srcdir="${src}" destdir="${classes}" deprecation="on" debug="on" encoding="utf-8" source="1.6" target="1.6">
 			<classpath><path refid="classpath" /></classpath>
 		</javac>
 		<copy todir="${classes}">
@@ -68,10 +86,33 @@
 	    <tag name="todo" scope="all" description="To do:"/>
 	  </javadoc>
 	</target>
-		
+
 	<target name="jar" depends="compile">
+	    <manifestclasspath property="jar.classpath" jarfile="${dist}/${project}-${talismane.version}.jar">
+	      <classpath refid="classpath.jar"/>
+	    </manifestclasspath>
+		<jar jarfile="${dist}/${project}-${talismane.version}.jar" basedir="${classes}">
+			<manifest>
+	    		<attribute name="Main-Class" value="com.joliciel.talismane.fr.TalismaneFrench"/>
+	    		<attribute name="Class-Path" value="${jar.classpath}"/>
+	    	</manifest>
+		</jar>
+		<zip destfile="${dist}/${project}-${talismane.version}.zip">
+			<fileset file="${dist}/${project}-${talismane.version}.jar" />
+			<fileset dir="${dist}">
+				<include name="lib/*.jar" />
+				<include name="talismane-utils-${talismane.version}.jar" />
+				<include name="talismane-machineLearning-${talismane.version}.jar" />
+				<include name="talismane-core-${talismane.version}.jar" />
+				<include name="talismane-lefff-${talismane.version}.jar" />
+				<include name="talismane-ftbDep-${talismane.version}.jar" />
+			</fileset>
+		</zip>
+	</target>
+		
+	<target name="one-jar" depends="jar">
         <!-- Construct the One-JAR file -->   
-        <one-jar destfile="${dist}/${project}-${talismane.version}.jar">
+        <one-jar destfile="${dist}/${project}-${talismane.version}-allDeps.jar">
         	<manifest>
         		<attribute name="One-Jar-Main-Class" value="com.joliciel.talismane.fr.TalismaneFrench" />
         	</manifest>
