--- a/talismane_ftbDep/build.xml
+++ b/talismane_ftbDep/build.xml
@@ -33,7 +33,7 @@
 	</target>
 		
 	<target name="compile" depends="init">
-		<javac srcdir="${src}" destdir="${classes}" deprecation="on" debug="on" encoding="utf-8">
+		<javac srcdir="${src}" destdir="${classes}" deprecation="on" debug="on" encoding="utf-8" source="1.6" target="1.6">
 			<classpath><path refid="classpath" /></classpath>
 		</javac>
 		<copy todir="${classes}">
