--- a/talismane_trainer_fr/build.xml
+++ b/talismane_trainer_fr/build.xml
@@ -44,7 +44,7 @@
 	</target>
 	
 	<target name="compile" depends="init">
-		<javac srcdir="${src}" destdir="${classes}" deprecation="on" debug="on" encoding="utf-8">
+		<javac srcdir="${src}" destdir="${classes}" deprecation="on" debug="on" encoding="utf-8" source="1.6" target="1.6">
 			<classpath><path refid="classpath" /></classpath>
 		</javac>
 		<copy todir="${classes}">
@@ -71,8 +71,12 @@
 	</target>
 		
 	<target name="jar" depends="compile">
+		<jar jarfile="${dist}/${project}-${talismane.version}.jar" basedir="${classes}" />
+	</target>
+		
+	<target name="one-jar" depends="jar">
         <!-- Construct the One-JAR file -->   
-        <one-jar destfile="${dist}/${project}-${talismane.version}.jar">
+        <one-jar destfile="${dist}/${project}-${talismane.version}-allDeps.jar">
         	<manifest>
         		<attribute name="One-Jar-Main-Class" value="com.joliciel.talismane.trainer.fr.PosTaggerMaxentRunner" />
         	</manifest>
