--- a/talismane_fr/build.xml
+++ b/talismane_fr/build.xml
@@ -38,6 +38,7 @@
 				<include name="talismane-core-${talismane.version}.jar" />
 				<include name="talismane-lefff-${talismane.version}.jar" />
 				<include name="talismane-ftbDep-${talismane.version}.jar" />
+				<include name="talismane-ftb-${talismane.version}.jar" />
 			</fileset>
 			<!-- build output path -->
 			<pathelement location="${classes}"/>
@@ -52,6 +53,7 @@
 				<include name="talismane-core-${talismane.version}.jar" />
 				<include name="talismane-lefff-${talismane.version}.jar" />
 				<include name="talismane-ftbDep-${talismane.version}.jar" />
+				<include name="talismane-ftb-${talismane.version}.jar" />
 			</fileset>
 		</path>
 	</target>
@@ -106,6 +108,7 @@
 				<include name="talismane-core-${talismane.version}.jar" />
 				<include name="talismane-lefff-${talismane.version}.jar" />
 				<include name="talismane-ftbDep-${talismane.version}.jar" />
+				<include name="talismane-ftb-${talismane.version}.jar" />
 			</fileset>
 		</zip>
 	</target>
@@ -121,16 +124,17 @@
                 <fileset dir="${classes}"/>
             </main>
             <lib>
-				<fileset dir="${sharedLib}">
-					<include name="**/*.jar" />
-				</fileset>
-				<fileset dir="${dist}">
-					<include name="talismane-utils-${talismane.version}.jar" />
-					<include name="talismane-machineLearning-${talismane.version}.jar" />
-					<include name="talismane-core-${talismane.version}.jar" />
-					<include name="talismane-lefff-${talismane.version}.jar" />
-					<include name="talismane-ftbDep-${talismane.version}.jar" />
-				</fileset>
+		<fileset dir="${sharedLib}">
+			<include name="**/*.jar" />
+		</fileset>
+		<fileset dir="${dist}">
+			<include name="talismane-utils-${talismane.version}.jar" />
+			<include name="talismane-machineLearning-${talismane.version}.jar" />
+			<include name="talismane-core-${talismane.version}.jar" />
+			<include name="talismane-lefff-${talismane.version}.jar" />
+			<include name="talismane-ftbDep-${talismane.version}.jar" />
+			<include name="talismane-ftb-${talismane.version}.jar" />
+		</fileset>
             </lib>
         </one-jar>
     </target>
