--- a/talismane_fr/src/log4j.properties
+++ b/talismane_fr/src/log4j.properties
@@ -4,6 +4,7 @@ log4j.rootLogger=INFO,logfile
 #log4j.rootLogger=INFO,logfile,stdout
 log4j.category.com.joliciel=DEBUG
 #log4j.category.opennlp=DEBUG
+#log4j.category.com.joliciel.talismane.TalismaneImpl=TRACE
 #log4j.category.com.joliciel.talismane.filters=TRACE
 #log4j.category.com.joliciel.talismane.parser=TRACE
 #log4j.category.com.joliciel.talismane.parser.features=TRACE
