--- a/talismane_standoff/build.xml
+++ b/talismane_standoff/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project default="jar" name="talismane-trainer-fr">
+<project default="jar" name="talismane-standoff">
     <!--this file was created by Eclipse Runnable JAR Export Wizard-->
     <!--ANT 1.7 is required -->
     <import file="../ant/global.xml"/>
@@ -11,13 +11,23 @@
 	
 	<target name="init" description="Initializes properties that are used by other targets.">
 		<property name="project" value="${ant.project.name}" />
-		<property name="prettyName" value="Talismane Trainer for French" />
+		<property name="prettyName" value="Talismane Standoff import/export" />
 		<property name="sharedLib" value="../lib"/>
 		<property name="dist" value="../dist"/>
 		<property name="src" value="src"/>
 		<property name="build" value="build"/>
 		<property name="classes" location="${build}/classes" />
 		<property name="doc" location="${build}/doc" />
+		<mkdir dir="${build}" />
+		<mkdir dir="${classes}" />
+		<mkdir dir="${doc}" />
+		<mkdir dir="${dist}" />
+		<mkdir dir="${dist}/lib" />
+		<copy todir="${dist}/lib">
+			<fileset dir="${sharedLib}">
+				<include name="**/*.jar" />
+			</fileset>
+		</copy>
 		<path id="classpath">
 			<fileset dir="${sharedLib}">
 				<include name="**/*.jar" />
@@ -27,16 +37,23 @@
 				<include name="talismane-machineLearning-${talismane.version}.jar" />
 				<include name="talismane-core-${talismane.version}.jar" />
 				<include name="talismane-lefff-${talismane.version}.jar" />
-				<include name="talismane-ftb-${talismane.version}.jar" />
-				<include name="talismane-ftbDep-${talismane.version}.jar" />
+				<include name="talismane-fr-${talismane.version}.jar" />
 			</fileset>
 			<!-- build output path -->
 			<pathelement location="${classes}"/>
 		</path>
-		<mkdir dir="${build}" />
-		<mkdir dir="${classes}" />
-		<mkdir dir="${doc}" />
-		<mkdir dir="${dist}" />
+		<path id="classpath.jar">
+			<fileset dir="${dist}/lib">
+				<include name="**/*.jar" />
+			</fileset>
+			<fileset dir="${dist}">
+				<include name="talismane-utils-${talismane.version}.jar" />
+				<include name="talismane-machineLearning-${talismane.version}.jar" />
+				<include name="talismane-core-${talismane.version}.jar" />
+				<include name="talismane-lefff-${talismane.version}.jar" />
+				<include name="talismane-fr-${talismane.version}.jar" />
+			</fileset>
+		</path>
 	</target>
 			
 	<target name="clean" depends="init" description="removes all directories related to this build">
@@ -64,38 +81,56 @@
 	  			encoding="UTF-8"
 	           use="true"
 	           windowtitle="${prettyName} API">
-	    <doctitle><![CDATA[<h1>Talismane Trainer for French API</h1>]]></doctitle>
+	    <doctitle><![CDATA[<h1>Talismane for French API</h1>]]></doctitle>
 	    <bottom><![CDATA[<i>Copyright &#169; 2012 Joliciel Informatique SARL. All Rights Reserved.</i>]]></bottom>
 	    <tag name="todo" scope="all" description="To do:"/>
 	  </javadoc>
 	</target>
-		
+
 	<target name="jar" depends="compile">
-		<jar jarfile="${dist}/${project}-${talismane.version}.jar" basedir="${classes}" />
+	    <manifestclasspath property="jar.classpath" jarfile="${dist}/${project}-${talismane.version}.jar">
+	      <classpath refid="classpath.jar"/>
+	    </manifestclasspath>
+		<jar jarfile="${dist}/${project}-${talismane.version}.jar" basedir="${classes}">
+			<manifest>
+	    		<attribute name="Main-Class" value="com.joliciel.talismane.fr.TalismaneFrench"/>
+	    		<attribute name="Class-Path" value="${jar.classpath}"/>
+	    	</manifest>
+		</jar>
+		<zip destfile="${dist}/${project}-${talismane.version}.zip">
+			<fileset file="${dist}/${project}-${talismane.version}.jar" />
+			<fileset dir="${dist}">
+				<include name="lib/*.jar" />
+				<include name="talismane-utils-${talismane.version}.jar" />
+				<include name="talismane-machineLearning-${talismane.version}.jar" />
+				<include name="talismane-core-${talismane.version}.jar" />
+				<include name="talismane-lefff-${talismane.version}.jar" />
+				<include name="talismane-fr-${talismane.version}.jar" />
+			</fileset>
+		</zip>
 	</target>
 		
 	<target name="one-jar" depends="jar">
         <!-- Construct the One-JAR file -->   
         <one-jar destfile="${dist}/${project}-${talismane.version}-allDeps.jar">
         	<manifest>
-        		<attribute name="One-Jar-Main-Class" value="com.joliciel.talismane.trainer.fr.Main" />
+        		<attribute name="One-Jar-Main-Class" value="com.joliciel.talismane.standoff.Main" />
         	</manifest>
             <main>
                 <!-- Construct main.jar from classes and source code -->
                 <fileset dir="${classes}"/>
             </main>
             <lib>
-				<fileset dir="${sharedLib}">
-					<include name="**/*.jar" />
-				</fileset>
-				<fileset dir="${dist}">
-					<include name="talismane-utils-${talismane.version}.jar" />
-					<include name="talismane-machineLearning-${talismane.version}.jar" />
-					<include name="talismane-core-${talismane.version}.jar" />
-					<include name="talismane-lefff-${talismane.version}.jar" />
-					<include name="talismane-ftb-${talismane.version}.jar" />
-					<include name="talismane-ftbDep-${talismane.version}.jar" />
-				</fileset>
+		<fileset dir="${sharedLib}">
+			<include name="**/*.jar" />
+		</fileset>
+		<fileset dir="${dist}">
+			<include name="talismane-utils-${talismane.version}.jar" />
+			<include name="talismane-machineLearning-${talismane.version}.jar" />
+			<include name="talismane-core-${talismane.version}.jar" />
+			<include name="talismane-lefff-${talismane.version}.jar" />
+			<include name="talismane-fr-${talismane.version}.jar" />
+		</fileset>
             </lib>
         </one-jar>
     </target>
