--- a/build.xml
+++ b/build.xml
@@ -22,17 +22,13 @@
 				<include name="talismane_lefff/build.xml"/>
 				<include name="talismane_ftb/build.xml"/>
 				<include name="talismane_ftbDep/build.xml"/>
+				<include name="talismane_other/build.xml"/>
 			</fileset>
 		</subant>
 		<subant target="one-jar">
 			<fileset dir=".">
 				<include name="talismane_fr/build.xml"/>
 				<include name="talismane_trainer_fr/build.xml"/>
-			</fileset>
-		</subant>
-		<subant target="one-jar">
-			<fileset dir=".">
-				<include name="talismane_standoff/build.xml"/>
 			</fileset>
 		</subant>
 	</target>
@@ -58,17 +54,13 @@
 				<include name="talismane_lefff/build.xml"/>
 				<include name="talismane_ftb/build.xml"/>
 				<include name="talismane_ftbDep/build.xml"/>
+				<include name="talismane_other/build.xml"/>
 			</fileset>
 		</subant>
 		<subant target="clean">
 			<fileset dir=".">
 				<include name="talismane_fr/build.xml"/>
 				<include name="talismane_trainer_fr/build.xml"/>
-			</fileset>
-		</subant>
-		<subant target="clean">
-			<fileset dir=".">
-				<include name="talismane_standoff/build.xml"/>
 			</fileset>
 		</subant>
 	</target>
