R1.8.0b Merged talismane_trainer_fr into talismane_core, to avoid code duplication and take advantage of numerous options when training Merged talismane_ftbDep into talismane_fr (one class only, fits will with project) talismane_core/TalismaneConfig: added new "Server" mode where Talismane listens on a given port and processes input received. talisamne_core/TalismaneConfig: added all required training options talismane_core/TalisamneConfig: separated config from language specific implementation, to lighten implementation class that's stored in TalismaneSession talismane_core/Talismane: added Reader and Writer to Talismane, to allow a different reader/writer combination for each socket opened talismane_core/TalismaneImpl: implemented "train" command for all modules talisamne_core/TalismaneSession: added LanguageSpecificImplementation to ThreadLocal storage talismane_core/ParseConfigurationProcessor: added Writer to onNextParseConfiguration, to allow processor to send output to a specific writer talismane_core/PosTagSequenceProcessor: same change as above talismane_core/SentenceProcessor: same change as above talismane_core/TokenSequenceProcessor: same change as above talismane_core/TokenFilterServiceImpl: moved all French filters to talismane_fr + new method on LanguageSpecificImplementation to find them talismane_fr/TalismaneFrench: changed to inherit from new light LanguageSpecificImplementation talismane_term_extractor/build.xml: unified versions on terminology and core packages talismane_term_viewer/build.xml: same change as above talismane_trainer_fr: removed project talismane_ftbDep: removed project

--- a/talismane_term_extractor/build.xml
+++ b/talismane_term_extractor/build.xml
@@ -105,17 +105,17 @@
 	</target>
 
 	<target name="jar" depends="compile">
-	    <manifestclasspath property="jar.classpath" jarfile="${dist}/${project}-${talismane.terminology.version}.jar">
+	    <manifestclasspath property="jar.classpath" jarfile="${dist}/${project}-${talismane.version}.jar">
 	      <classpath refid="classpath.jar"/>
 	    </manifestclasspath>
-		<jar jarfile="${dist}/${project}-${talismane.terminology.version}.jar" basedir="${classes}">
+		<jar jarfile="${dist}/${project}-${talismane.version}.jar" basedir="${classes}">
 			<manifest>
 	    		<attribute name="Main-Class" value="com.joliciel.talismane.terminology.Main"/>
 	    		<attribute name="Class-Path" value="${jar.classpath}"/>
 	    	</manifest>
 		</jar>
-		<zip destfile="${dist}/${project}-${talismane.terminology.version}.zip">
-			<fileset file="${dist}/${project}-${talismane.terminology.version}.jar" />
+		<zip destfile="${dist}/${project}-${talismane.version}.zip">
+			<fileset file="${dist}/${project}-${talismane.version}.jar" />
 			<fileset dir="${dist}">
 				<include name="lib/*.jar" />
 			</fileset>
@@ -131,7 +131,7 @@
 
 	<target name="one-jar" depends="jar">
         <!-- Construct the One-JAR file -->   
-        <one-jar destfile="${dist}/${project}-${talismane.terminology.version}-allDeps.jar">
+        <one-jar destfile="${dist}/${project}-${talismane.version}-allDeps.jar">
         	<manifest>
         		<attribute name="One-Jar-Main-Class" value="com.joliciel.talismane.terminology.Main" />
         	</manifest>
