--- a/build.xml
+++ b/build.xml
@@ -21,14 +21,22 @@
 			<fileset dir=".">
 				<include name="talismane_lefff/build.xml"/>
 				<include name="talismane_ftb/build.xml"/>
-				<include name="talismane_ftbDep/build.xml"/>
 				<include name="talismane_other/build.xml"/>
 			</fileset>
 		</subant>
 		<subant target="one-jar">
 			<fileset dir=".">
 				<include name="talismane_fr/build.xml"/>
-				<include name="talismane_trainer_fr/build.xml"/>
+			</fileset>
+		</subant>
+		<subant target="one-jar">
+			<fileset dir=".">
+				<include name="talismane_term_extractor/build.xml"/>
+			</fileset>
+		</subant>
+		<subant target="one-jar">
+			<fileset dir=".">
+				<include name="talismane_term_viewer/build.xml"/>
 			</fileset>
 		</subant>
 	</target>
@@ -53,14 +61,22 @@
 			<fileset dir=".">
 				<include name="talismane_lefff/build.xml"/>
 				<include name="talismane_ftb/build.xml"/>
-				<include name="talismane_ftbDep/build.xml"/>
 				<include name="talismane_other/build.xml"/>
 			</fileset>
 		</subant>
 		<subant target="clean">
 			<fileset dir=".">
 				<include name="talismane_fr/build.xml"/>
-				<include name="talismane_trainer_fr/build.xml"/>
+			</fileset>
+		</subant>
+		<subant target="clean">
+			<fileset dir=".">
+				<include name="talismane_term_extractor/build.xml"/>
+			</fileset>
+		</subant>
+		<subant target="clean">
+			<fileset dir=".">
+				<include name="talismane_term_viewer/build.xml"/>
 			</fileset>
 		</subant>
 	</target>
