--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ build/
 distTerminology/
 talismane_core/languagePacks/englishLanguagePack/*.zip
 talismane_core/languagePacks/frenchLanguagePack/*.zip
+.settings
+.project
