--- a/talismane_term_viewer/build.xml
+++ b/talismane_term_viewer/build.xml
@@ -67,7 +67,7 @@
 	</target>
 	
 	<target name="compile" depends="init">
-		<javac srcdir="${src}" destdir="${classes}" deprecation="on" debug="on" encoding="utf-8"  executable="C:\Program Files\Java\jdk1.7.0_09\bin\javac" compiler="modern">
+		<javac srcdir="${src}" destdir="${classes}" deprecation="on" debug="on" encoding="utf-8" source="1.7" target="1.7" includeantruntime="false">
 			<classpath><path refid="classpath" /></classpath>
 		</javac>
 		<copy todir="${classes}">
