--- a/build.xml
+++ b/build.xml
@@ -21,11 +21,12 @@
 			<fileset dir=".">
 				<include name="talismane_lefff/build.xml"/>
 				<include name="talismane_ftb/build.xml"/>
-				<include name="talismane_other/build.xml"/>
+				<include name="talismane_extensions/build.xml"/>
 			</fileset>
 		</subant>
 		<subant target="one-jar">
 			<fileset dir=".">
+				<include name="talismane_lang/build.xml"/>
 				<include name="talismane_fr/build.xml"/>
 				<include name="talismane_en/build.xml"/>
 			</fileset>
@@ -62,11 +63,12 @@
 			<fileset dir=".">
 				<include name="talismane_lefff/build.xml"/>
 				<include name="talismane_ftb/build.xml"/>
-				<include name="talismane_other/build.xml"/>
+				<include name="talismane_extensions/build.xml"/>
 			</fileset>
 		</subant>
 		<subant target="clean">
 			<fileset dir=".">
+				<include name="talismane_lang/build.xml"/>
 				<include name="talismane_fr/build.xml"/>
 				<include name="talismane_en/build.xml"/>
 			</fileset>
