--- a/talismane_en/build.xml
+++ b/talismane_en/build.xml
@@ -9,7 +9,7 @@
 		<echo message="try targets jar, etc." />
 	</target>
 	
-	<target name="init" description="Initializes properties that are used by other targets.">
+	<target name="init" description="Initializes properties that are used by extensions targets.">
 		<property name="project" value="${ant.project.name}" />
 		<property name="prettyName" value="Talismane for English" />
 		<property name="sharedLib" value="../lib"/>
@@ -36,7 +36,7 @@
 				<include name="talismane-utils-${talismane.version}.jar" />
 				<include name="talismane-machineLearning-${talismane.version}.jar" />
 				<include name="talismane-core-${talismane.version}.jar" />
-				<include name="talismane-other-${talismane.version}.jar" />
+				<include name="talismane-extensions-${talismane.version}.jar" />
 			</fileset>
 			<!-- build output path -->
 			<pathelement location="${classes}"/>
@@ -49,7 +49,7 @@
 				<include name="talismane-utils-${talismane.version}.jar" />
 				<include name="talismane-machineLearning-${talismane.version}.jar" />
 				<include name="talismane-core-${talismane.version}.jar" />
-				<include name="talismane-other-${talismane.version}.jar" />
+				<include name="talismane-extensions-${talismane.version}.jar" />
 			</fileset>
 		</path>
 	</target>
@@ -102,7 +102,7 @@
 				<include name="talismane-utils-${talismane.version}.jar" />
 				<include name="talismane-machineLearning-${talismane.version}.jar" />
 				<include name="talismane-core-${talismane.version}.jar" />
-				<include name="talismane-other-${talismane.version}.jar" />
+				<include name="talismane-extensions-${talismane.version}.jar" />
 			</fileset>
 		</zip>
 	</target>
@@ -125,7 +125,7 @@
 			<include name="talismane-utils-${talismane.version}.jar" />
 			<include name="talismane-machineLearning-${talismane.version}.jar" />
 			<include name="talismane-core-${talismane.version}.jar" />
-			<include name="talismane-other-${talismane.version}.jar" />
+			<include name="talismane-extensions-${talismane.version}.jar" />
 		</fileset>
             </lib>
         </one-jar>
