--- a/talismane_extensions/build.xml
+++ b/talismane_extensions/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project default="jar" name="talismane-other">
+<project default="jar" name="talismane-extensions">
     <!--this file was created by Eclipse Runnable JAR Export Wizard-->
     <!--ANT 1.7 is required -->
     <import file="../ant/global.xml"/>
